--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -17,7 +17,7 @@
 }
 h3{
     margin-bottom: 2rem;
-    color: darkgreen;
+    color: #FAFBFC;
     text-align: center;
     text-decoration: underline;
     font-size: 3rem;
