--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -16,7 +16,7 @@
     text-align: center;
 }
 h3{
-    margin-bottom: 2rem;
+    margin-top: 2em;
     color: #FAFBFC;
     text-align: center;
     text-decoration: underline;
