--- a/src/components/SideDrawer/sideDrawer.css
+++ b/src/components/SideDrawer/sideDrawer.css
@@ -6,9 +6,10 @@
     top:0;
     left:0;
     width: 20%;
+    min-width: 192px;
     max-width: 400px;
     z-index: 200;
-    transform: translateX(-100%);
+    transform: translateX(-200%);
     transition: transform 0.3s ease-out;
 }
 
