--- a/src/App.css
+++ b/src/App.css
@@ -24,28 +24,30 @@ html, body {
     margin:auto;
     display: flex;
     align-items: center;
-    width: 40%;
+    width: 80%;
     justify-content: space-around;
-    margin-top: 7rem;
-    margin-bottom: 15rem;
+    margin-top: 10vh;
+    margin-bottom: 40vh;
     color: #13aa52;
-    font-size: 25px;
+    font-size: 1rem;
     
   }
 
   .button-hauptseite{
     margin:auto;
+
     
-    margin-left: 1rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     background-color: #116149; /* Green */
     border: none;
-    width: 100px;
+    width: 90%;
     border-radius: 8px;
     color: white;
-    padding: 15px 16px;
+    padding: 10% 10%;
     text-align: center;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 0.7rem;
     justify-content: space-around;
   }
 
@@ -56,30 +58,32 @@ html, body {
       margin:auto;
       display: flex;
       align-items: center;
-      width: 60%;
+      width: 80%;
       justify-content: space-around;
-      margin-top: 7rem;
-      margin-bottom: 25rem;
+      margin-top: 10vh;
+      margin-bottom: 50vh;
       color: #13aa52;
-      font-size: 30px;
+      font-size: 1.5rem;
       
     }
-
+  
     .button-hauptseite{
       margin:auto;
       
-      margin-left: 2rem;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
       background-color: #116149; /* Green */
       border: none;
-      width: 160px;
+      width: 90%;
       border-radius: 8px;
       color: white;
-      padding: 20px 22px;
+      padding: 15px 15px;
       text-align: center;
       text-decoration: none;
-      font-size: 20px;
-      justify-content: space-around;
+      font-size: 1.1rem;
+      justify-content: space-around;      
     }
+  
     }
 
     @media screen and (min-width: 640px){
@@ -89,29 +93,64 @@ html, body {
         align-items: center;
         width: 80%;
         justify-content: space-around;
-        margin-top: 7rem;
-        margin-bottom: 37rem;
+        margin-top: 10vh;
+        margin-bottom: 70vh;
         color: #13aa52;
-        font-size: 50px;
+        font-size: 2.5rem;
         
       }
-  
+    
       .button-hauptseite{
         margin:auto;
-        
-        margin-left: 4rem;
+    
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
         background-color: #116149; /* Green */
         border: none;
-        width: 450px;
+        width: 90%;
         border-radius: 8px;
         color: white;
-        padding: 30px 32px;
+        padding: 10% 10%;
         text-align: center;
         text-decoration: none;
-        font-size: 30px;
+        font-size: 1.5rem;
         justify-content: space-around;
       }
+    
       }
+
+      @media screen and (min-width: 1280px){
+        .willkommen{
+          margin:auto;
+          display: flex;
+          align-items: center;
+          width: 80%;
+          justify-content: space-around;
+          margin-top: 10vh;
+          margin-bottom: 65vh;
+          color: #13aa52;
+          font-size: 3rem;
+          
+        }
+      
+        .button-hauptseite{
+          margin: auto;
+      
+          margin-left: 0.5rem;
+          margin-right: 0.5rem;
+          background-color: #116149; /* Green */
+          border: none;
+          width: 90%;
+          border-radius: 8px;
+          color: white;
+          padding: 20px 200px;
+          text-align: center;
+          text-decoration: none;
+          font-size: 2rem;
+          justify-content: space-around;
+        }
+      
+        }
 
 
 /* Navigation */
@@ -128,7 +167,7 @@ html, body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  min-height: 10vh;
+  height: 10vh;
   background: #1a1a1a;
   color: white; 
 }
@@ -145,7 +184,7 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 100%;
   max-width: 100%;
   height: auto;
 }
