--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -20,7 +20,7 @@
  font-family: 'Roboto';
 }
 
-@media screen and (max-width: 320px){
+@media screen and (min-width: 0px){
     .nav_logo a{
         color: #13aa52;
         text-decoration: none;
@@ -36,6 +36,24 @@
         
         }
 }
+
+@media screen and (min-width: 640px){
+    .nav_logo a{
+        color: #13aa52;
+        text-decoration: none;
+        font-size: 1.75rem;
+    
+    }
+}
+@media screen and (min-width: 12800px){
+    .nav_logo a{
+        color: #13aa52;
+        text-decoration: none;
+        font-size: 2rem;
+    
+    }
+}
+
 /* .nav_logo a{
     color: #13aa52;
     text-decoration: none;
