--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -22,6 +22,61 @@
     list-style-type: none;
     text-decoration: none;
 }
-.description{
-    font-size: 20px;
+
+
+.imageCategory{
+    max-width: 90%;
+    max-width: 800px;
 }
+
+@media screen and (max-width: 320px){
+h1{
+    font-size: 1rem !important;
+}
+h2{
+    font-size: 0.9rem !important;
+}
+.description{
+    font-size: 0.8rem;
+}
+        
+    }
+
+@media screen and (min-width: 320px) and (max-width: 640px){
+        h1{
+            font-size: 1.5rem !important;
+        }
+        h2{
+            font-size: 1.35rem !important;
+        }
+        .description{
+            font-size: 1.2rem;
+        }
+                
+            }
+
+@media screen and (min-width: 640px) and (max-width: 1280px){
+                h1{
+                    font-size: 2rem !important;
+                }
+                h2{
+                    font-size: 1.8rem !important;
+                }
+                .description{
+                    font-size: 1.6rem;
+                }
+                        
+                    }
+                    
+@media screen and (min-width: 1280px){
+                h1{
+                    font-size: 3rem !important;
+                }
+                h2{
+                    font-size: 2.7rem !important;
+                }
+                .description{
+                    font-size: 2.4rem;
+                }
+                        
+                    }
