--- a/src/components/menu/menuDetail.css
+++ b/src/components/menu/menuDetail.css
@@ -8,7 +8,8 @@
     float: center;
     
 }
-.text{  
+.text{ 
+    font-size: large; 
 }
 .title{
     margin-top: 10rem;
@@ -16,6 +17,6 @@
 }
 .menuImage{
     border-radius: 50%;
-    width: 300px;
-    
+    max-width: 300px;
+    width: 70%;
 }
