--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -64,6 +64,18 @@
 .spacer{
     flex: 1;
 }
+.nav-button{
+    margin-right: 2rem;
+    background-color: #116149; /* Green */
+    border: none;
+    width: 90%;
+    border-radius: 6px;
+    color: white;
+    padding: 1px 5px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1rem;
+}
 
 .nav_items ul{
     list-style-type: none;
